Fixing h1 alignment issue on people pages.

--- a/views/sass/_people.sass
+++ b/views/sass/_people.sass
@@ -48,6 +48,7 @@ $image_pad_3  : 4rem
             align: left
           padding: 
             top:   0
+            left:  1rem
           
     .image
       @include col(1, 1, 0, 0)
